<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.nutsu7.BivolManager.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_rosii"
        android:name="com.nutsu7.BivolManager.ui.Rosii.RosiiFragment"
        android:label="@string/title_rosii"
        tools:layout="@layout/fragment_rosii" />

    <fragment
        android:id="@+id/navigation_angajat"
        android:name="com.nutsu7.BivolManager.ui.angajat.AngajatFragment"
        android:label="@string/title_angajat"
        tools:layout="@layout/fragment_angajat">
        <action
            android:id="@+id/action_navigation_angajat_to_navigation_angajatStats"
            app:destination="@id/navigation_angajatStats"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/navigation_angajat"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_angajatStats"
        android:name="com.nutsu7.BivolManager.ui.angajat.AngajatStatsFragment"
        android:label="@string/title_angajat_stats"
        tools:layout="@layout/fragment_angajat_stats" />

    <fragment
        android:id="@+id/navigation_struguri"
        android:name="com.nutsu7.BivolManager.ui.struguri.StruguriFragment"
        android:label="@string/title_struguri"
        tools:layout="@layout/fragment_angajat" />
</navigation>